--- a/Amazon Clone 18_10_2022/index.html
+++ b/Amazon Clone 18_10_2022/index.html
@@ -152,7 +152,7 @@
                     <div class="product-detail-imag">
                         <img src="https://images-eu.ssl-images-amazon.com/images/I/81aRc2uLLWL._AC_UL160_SR160,160_.jpg" alt="">
                     </div>
-                    <a href="./product.html">HP 15s, 12th Gen Intel Core i5 16GB RAM/512GB SSD 15.6-inch(39.6 cm) Micro-Edge Anti-Glare FHD Laptop/Win 11/Intel Iris Xe Graphics/Dual Speakers/Alexa/Backlit KB/MSO/Fast Charge, 15s- fq5112TU</a>
+                    <a href="./HP-product.html">HP 15s, 12th Gen Intel Core i5 16GB RAM/512GB SSD 15.6-inch(39.6 cm) Micro-Edge Anti-Glare FHD Laptop/Win 11/Intel Iris Xe Graphics/Dual Speakers/Alexa/Backlit KB/MSO/Fast Charge, 15s- fq5112TU</a>
                     <p>
                         <strong>₹62,990.00</strong>
                     </p>
